Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21723

Formatted text should automatically be set to StyledText instead of RichText

    XMLWordPrintable

Details

    • Ife213be95985ad1022e2f60241e69ecd9f467caf

    Description

      Now that StyledText supports links, paragraphs, headings and lists; instead of defaulting to Text.RichText which is slow, we should use StyledText by default.
      It is always possible to set textFormat to RichText to support tables for example.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              bodson Yann Bodson (Inactive)
              bodson Yann Bodson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes