Text format AutoText should use StyledText instead of RichText.

Task-number: QTBUG-21723
Change-Id: Ife213be95985ad1022e2f60241e69ecd9f467caf
Reviewed-on: http://codereview.qt-project.org/5825
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Yann Bodson <yann.bodson@nokia.com>